<resources>
    <string name="app_name">Reserva de Ambientes</string>
    <string name="management">Management</string>
    <string name="my_reservations">Reservations</string>
    <string name="name">Name</string>
    <string name="type">Type</string>
    <string name="department">Department</string>
    <string name="details">Details</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="reserve">Reserve</string>
    <string name="room_select">Select a room</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="save">Save</string>
    <string name="clean">Clean</string>
    <string name="room">Room</string>
    <string name="group">Group</string>
    <string name="startTime">Start Time</string>
    <string name="endTime">End Time</string>
    <string name="addRoomButtonDescription">Add room button</string>
    <string name="specifications">Specifications</string>
    <string name="needsKey">Needs key</string>
    <string name="hasAirConditioner">Has Air Conditioner</string>
    <string name="hasEnabledNetworkPoint">Has Enabled Network Point</string>
    <string name="hasProjector">Has Projector</string>
    <string name="hasTV">Has TV</string>
    <string name="CheckBoxAutomaticApproval">Automatic Approval</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="deseja_realmente_apagar">Are you sure you want to delete</string>
    <string name="deseja_realmente_cancelar">Cancel the reserve of room</string>
    <string name= "yes">Yes</string>
    <string name= "no">No</string>
    <string name= "confirmation">Confirm</string>
    <string name="responsible">Who is the responsible?</string>
    <string name="responsible_select">Select a Responsible</string>
    <string name="purpose">Purpose</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="automaticApprovalType">Automatic Approval</string>
    <string name="onlyFederalServant">Federal Employee</string>
    <string name="student">Student</string>
    <string name="no_one">Nobody</string>
    <string name="everyone">Federal Employee and Student</string>
    <string name="reserve_request">Requests</string>
    <string name="username">Username</string>
    <string name="approve">Approve</string>
    <string name="disapprove">Disapprove</string>
    <string name="situation">Situation</string>
    <string name="all">All</string>
    <string name="pending">Pending</string>
    <string name="approved">Approved</string>
    <string name="disapproved">Disapproved</string>
    <string name="cancel">Cancel</string>
    <string name="failed_login">Login Failed!</string>
    <string name="login_activity_title">Ambient Reservation</string>
    <string name="notification_status">Status Notifications</string>
    <string name="cancelled">Cancelled</string>
    <string name="reservation_approved">Reservation Approved!</string>
    <string name="reservation_disapproved">Reservation Disapproved!</string>
    <string name="usertype_student">Student</string>
    <string name="usertype_admin">Admin</string>
    <string name="usertype_federalemployee">Federal Employee</string>
    <string name="active">Active</string>
    <string name="needs_key">\ Needs Key |\</string>
    <string name="has_air_conditioner">\ Has Air-Conditioner |\</string>
    <string name="has_network">\ Has Network |\</string>
    <string name="has_projector">\ Has Projector |\</string>
    <string name="has_tv">\ Has TV |\</string>
    <string name="my_reservations_title">My Reservations</string>
    <string name="room_management_title">Room Management</string>
    <string name="reservation_requests_title">Reservation Requests</string>
    <string name="logged_out">Logged out!</string>
    <string name="listing_all">Listing ALL</string>
    <string name="nothing_to_filter">Nothing to filter!</string>
    <string name="listing_pending">Listing PENDING</string>
    <string name="listing_approved">Listing APPROVED</string>
    <string name="listing_disapproved">Listing DISAPPROVED</string>
    <string name="your_reservation_status_changed">Your Reservation Status Changed!</string>
    <string name="the_reservation_of_room">\The reservation of room \</string>
    <string name="changed_to">\ changed to \</string>
    <string name="cannot_cancel_cancelled_reserve">Cannot cancel a cancelled reserve!</string>
    <string name="cannot_cancel_alreadystarted_ended_reserve">Cannot cancel reserve</string>
    <string name="cancelled_reserve">Cancelled Reserve!</string>
    <string name="enter_your_name">Enter your Name</string>
    <string name="name_is_empty">Name is empty!</string>
    <string name="create_a_reservation">Create a Reservation</string>
    <string name="select_a_room">Select a room!</string>
    <string name="fill_all_field">Fill all the fields!</string>
    <string name="incorrect_date">Incorrect date</string>
    <string name="incorrect_starttime">Incorrect StartTime</string>
    <string name="incorrect_endtime">Incorrect EndTime</string>
    <string name="cleaned_fields">Cleaned fields!</string>
    <string name="starttime_after_7">The start time must be equal or after 7:00</string>
    <string name="endtime_before_23">The end time must be equal or before 23:00</string>
    <string name="reservation_must_have_60minutes">The reservation must have at least 60 minutes!</string>
    <string name="enddate_must_be_after_startdate">The end date must be after the start date!</string>
    <string name="there_is_already_a_reservation">There already is a reservation at this date/time!</string>
    <string name="saved_reserve">Saved reserve!</string>
    <string name="reservation_request_situation_changed">Your Reservation Request Situation Changed!</string>
    <string name="the_situation_of_the_reservation">\The situation of the reservation of room \</string>
    <string name="create_a_room">Create a Room</string>
    <string name="the_room_must_have_a_name">The room must have a Name</string>
    <string name="select_a_type">Select a type!</string>
    <string name="select_an_automatic_approval">Select an automatic approval type!</string>
    <string name="select_a_responsible">Select a responsible!</string>
    <string name="saved_room">Saved room!</string>
    <string name="refresh">Refresh</string>
    <string name="refreshed">Refreshed!</string>
    <string name="maximum_limit_reservation">The reservation can\'t be more than 4 hours</string>
    <string name="classroom">Classroom</string>
    <string name="meeting_room">Meeting Room</string>
    <string name="informatic_laboratory">Informatic Laboratory</string>
    <string name="amphiteather">Amphiteather</string>
</resources>